# corridor

./: .gitignore  README.md  environment.yml  pyproject.toml
corridor/: create_best_fit_csv.py  fit_binned_lognormal.py  parse_bam_polya.py  predict.py
corridor/models/: metadata.json
data/: true_lengths.csv
src/corridor/: fit_binned_lognormal.py  predict.py
src/corridor/models/: rna004_130bps_sup@v5.1.0_v1.0.0.pkl
test/: run_e2e_test.sh
test/assets/: best_fit_idx.csv  expected_predictions.csv
